--- a/index.html
+++ b/index.html
@@ -1,85 +1,99 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="style.css" href="style.css">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>2 Style Rescue</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="Assests/style.css">
 
-  </head>
-  <body>
+  <title>2 Style Rescue</title>
 
-    <div class="container-fluid row sticky-top justify-content-center mx-auto">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html">
-              <img src="./Assests/pictures/TempLogo.png" alt="" width="60" height="48"
-              class="d-inline-block align-center">2 Style Rescue</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                <li class="nav-item active">
-                  <a class="nav-link" href="AboutUs.html">ABOUT US</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="rescues.html">RESCUES</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="applications.html">APPLICATIONS</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="FAQ.html">FAQ</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="dontations.html">DONATIONS</a>
-                </li>
-                  <li class="nav-item">
-                  <a class="nav-link" href="blog.html">BLOG</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="contact.html">CONTACT</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-      </div>
+</head>
 
+<body style = "background-image: url('../Assests/pictures/home_banner.jpeg')">
 
-      <!-- <div class="container">
-        <div class="row">
-          <img class='img-fluid w-100' src="Assests/pictures/home_banner.jpeg" alt="" />
+  <header>
+    <div class="container-fluid sticky-top mx-auto row justify-content-center" id="nav-bar-container">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" id="nav-bar-link" href="index.html">
+          <img src="./Assests/pictures/TempLogo.png" alt="" width="60" height="48"
+            class="d-inline-block align-center"><strong>2 Style Rescue</strong></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <li class="nav-item active">
+              <a class="nav-link" id="nav-bar-link" href="AboutUs.html">ABOUT US</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-bar-link" href="rescues.html">RESCUES</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-bar-link" href="applications.html">APPLICATIONS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-bar-link" href="FAQ.html">FAQ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-bar-link" href="dontations.html">DONATIONS</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-bar-link" href="blog.html">BLOG</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" id="nav-bar-link" href="contact.html">CONTACT</a>
+            </li>
+          </ul>
         </div>
-      </div> -->
+      </nav>
+    </div>
 
-      <!-- <div class="container-fluid no-padding">
-        <div class="row">
-          <div class="col-md-12">
-            <img src="Assests/pictures/home_banner.jpeg" alt="placeholder 960" class="img-responsive" />
+
+    <!-- Background image -->
+    <div class="p-5 text-center" id="home-banner">
+      <div class="mask">
+        <div class="row align-items-center">
+          <div class="col">
+            <div class="d-flex justify-content-center align-items-center" id="home-banner-text">
+              <div class="text-white">
+                <h1 class="mb-3">2 Styles Rescue</h1>
+                <h4 class="mb-3">Miniature Horses / Donkeys / Mules</h4>
+                <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a>
+              </div>
+            </div>
           </div>
         </div>
-      </div> -->
-
-      <div class="container-fluid no-padding" style="width: 100%; height: 50%;">
-        <img src="Assests/pictures/home_banner.jpeg" class="img-fluid" alt="Responsive image">
-        <p class="text-center" style="color:ghostwhite">Center aligned text on all viewport sizes.</p>
       </div>
+    </div>
+    <!-- Background image -->
 
-      <!-- <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <div class="container-fluid" style="max-width: 100%; height: 50%;">
-                <img src="Assests/pictures/home_banner.jpeg" class="img-fluid" alt="Responsive image">
-              </div>
-        </div>
+    <!-- <div class="container-fluid no-padding">
+        <img src="Assests/pictures/home_banner.jpeg" class="img-fluid" alt="Responsive image">
       </div> -->
+  </header>
 
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    </body>
+  <div class="card" style="width: 18rem;">
+    <img class="card-img-top" src="..." alt="Card image cap">
+    <div class="card-body">
+      <h5 class="card-title">Card title</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <a href="#" class="btn btn-primary">Go somewhere</a>
+    </div>
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
