--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
 
 
     <!-- Background image -->
-    <div class="p-5 text-center" id="home-banner">
+    <div class="container-fluid text-center no-padding" id="home-banner">
       <div class="mask">
-        <div class="row align-items-center">
-          <div class="col">
+        <div class="container-fluid no-padding" id = "home-banner-img">
+          <img src="Assests/pictures/home_banner.png" class="img-fluid" alt="Responsive image">
             <div class="d-flex justify-content-center align-items-center" id="home-banner-text">
               <div class="text-white">
                 <h1 class="mb-3">2 Styles Rescue</h1>
@@ -74,7 +74,7 @@
           </div>
         </div>
       </div>
-    </div>
+
     <!-- Background image -->
 
     <!-- <div class="container-fluid no-padding">
