--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
 
 
     <!-- Background image -->
-    <div class="container-fluid text-center no-padding" id="home-banner">
+    <div class="container-fluid text-center" id="home-banner">
       <div class="mask">
-        <div class="container-fluid no-padding" id = "home-banner-img">
-          <img src="Assests/pictures/home_banner.png" class="img-fluid" alt="Responsive image">
-            <div class="d-flex justify-content-center align-items-center" id="home-banner-text">
+        <img src="Assests/pictures/home_banner.png" class="img-fluid w-100" alt="Responsive image">
+        <div class="row align-items-center">
+          <div class="col">
+            <div class="d-flex-inline justify-content-center align-items-center" id="home-banner-text">
               <div class="text-white">
                 <h1 class="mb-3">2 Styles Rescue</h1>
                 <h4 class="mb-3">Miniature Horses / Donkeys / Mules</h4>
@@ -74,7 +75,8 @@
           </div>
         </div>
       </div>
-
+    </div>
+  
     <!-- Background image -->
 
     <!-- <div class="container-fluid no-padding">
@@ -84,10 +86,38 @@
 
 
   <div class="container-fluid" id = "lives-saved-banner">
-    <h1 class="display-3"><span id = "lives-saved-banner-number">0 </span> Lives Saved to Date</h1>
-
+    <h1 class="display-3 text-white"><span id = "lives-saved-banner-number">0 </span> Lives Saved to Date</h1>
   </div>
 
+  <div class="container-fluid">
+    <div class="container">
+      <div class="row align-items-start">
+        <div class="col" id = "homepage-col-1">
+          <div class="card" style="width: 18rem;">
+            <img src="Assests/pictures/homepage-col-1-img.png" class="card-img-top" alt="...">
+            <div class="card-body" style = 'background-color: darkseagreen;'>
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col" id = "homepage-col-2">
+          <div class="card" style="width: 18rem;">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="card-link">Card link</a>
+              <a href="#" class="card-link">Another link</a>
+            </div>
+          </div>
+        </div>
+        <div class="col" id = "homepage-col-3">
+          One of three columns
+        </div>
+      </div>
+  </div>
 
   <script>
     count = 100;
