--- a/dontations.html
+++ b/dontations.html
@@ -8,46 +8,52 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="Assests/style.css">
+    
     <title>2 Style Rescue Dontations</title>
   </head>
   <body>
 
-    <div class="container-fluid row sticky-top justify-content-center mx-auto">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="index.html">
+    <header>
+      <div class="container-fluid sticky-top mx-auto row justify-content-center" id="nav-bar-container">
+        <nav class="navbar navbar-expand-lg navbar-light">
+          <a class="navbar-brand" id="nav-bar-link" href="index.html">
             <img src="./Assests/pictures/TempLogo.png" alt="" width="60" height="48"
-            class="d-inline-block align-center">2 Style Rescue</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+              class="d-inline-block align-center"><strong>2 Style Rescue</strong></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
+            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-        
+  
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" href="AboutUs.html">ABOUT US</a>
+                <a class="nav-link" id="nav-bar-link" href="AboutUs.html">ABOUT US</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="rescues.html">RESCUES</a>
+                <a class="nav-link" id="nav-bar-link" href="rescues.html">RESCUES</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="applications.html">APPLICATIONS</a>
+                <a class="nav-link" id="nav-bar-link" href="applications.html">APPLICATIONS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="FAQ.html">FAQ</a>
+                <a class="nav-link" id="nav-bar-link" href="FAQ.html">FAQ</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="dontations.html">DONATIONS</a>
-              </li>
-                <li class="nav-item">
-                <a class="nav-link" href="blog.html">BLOG</a>
+                <a class="nav-link" id="nav-bar-link" href="dontations.html">DONATIONS</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">CONTACT</a>
+                <a class="nav-link" id="nav-bar-link" href="blog.html">BLOG</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="nav-bar-link" href="contact.html">CONTACT</a>
               </li>
             </ul>
           </div>
         </nav>
-    </div>
+      </div>
+
+      </header>
 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
