--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Added link to the jQuery Library -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="Assests/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+  <!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
+  <link rel="stylesheet" href="css/site.css">
 
   <title>2 Style Rescue</title>
 
@@ -20,83 +20,120 @@
 
 <body>
 
+
+
+<section>
   <header>
-    <div class="container-fluid sticky-top mx-auto row justify-content-center" id="nav-bar-container">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" id="nav-bar-link" href="index.html">
-          <img src="./Assests/pictures/TempLogo.png" alt="" width="60" height="48"
-            class="d-inline-block align-center"><strong>2 Style Rescue</strong></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-          aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
 
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-              <a class="nav-link" id="nav-bar-link" href="AboutUs.html">ABOUT US</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-bar-link" href="rescues.html">RESCUES</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-bar-link" href="applications.html">APPLICATIONS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-bar-link" href="FAQ.html">FAQ</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-bar-link" href="dontations.html">DONATIONS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-bar-link" href="blog.html">BLOG</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="nav-bar-link" href="contact.html">CONTACT</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+  <nav class="navbar navbar-expand-lg navbar-light" id="nav-bar-container">
+    <div class="container-fluid">
+      <div class="container">
+        <a class="navbar-brand" href="index.html" id="navbar-brand">
+          <img src="Assests/pictures/TempLogo.jpg" alt="" width="90" height="72">
+          2 Styles Rescue
+        </a>
+      </div>
+
+      <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon bg-dark"></span>
+      </button>
+
+
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" id="nav-bar-link" href="AboutUs.html">ABOUT US</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="nav-bar-link" href="rescues.html">RESCUES</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="nav-bar-link" href="applications.html">APPLICATIONS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="nav-bar-link" href="FAQ.html">FAQ</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="nav-bar-link" href="dontations.html">DONATIONS</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="nav-bar-link" href="blog.html">BLOG</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" id="nav-bar-link" href="contact.html">CONTACT</a>
+          </li>
+        </ul>
+      </div>
+
     </div>
+  </nav>
 
-    <!-- Background image -->
 
-    <!-- <div class="container-fluid no-padding">
-        <img src="Assests/pictures/home_banner.png" class="img-fluid" alt="Responsive image">
-      </div> -->
 
-            <!-- Background image -->
-            <div class="container-fluid text-center" id="home-banner">
-              <img src="Assests/pictures/home_banner.png" class="img-fluid" alt="Responsive image">
-                  <div class="d-flex-inline" id="home-banner-text">
-                    <div class="text-white">
-                      <h1 class="mb-3">2 Styles Rescue</h1>
-                      <h4 class="mb-3">Miniature Horses / Donkeys / Mules</h4>
-                    </div>
-                  </div>
-                </div>
-  </header>
+
+  <div class="container-fluid text-center" id="banner-container">
+    <div class="row" id="banner-row">
+      <div class="col-12">
+        <img src="../2StylesRescue/Assests/pictures/home_banner.png" class="img-fluid" alt="...">
+        <div class="col-12 align-items-end  mb-5">
+          <h1>2 Styles Rescue</h1></br>
+          <h4>Miniature Horses / Donkeys / Mules</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
 
 
   <div class="container-fluid" id="lives-saved-banner">
     <h1 class="display-3 text-white"><span id="lives-saved-banner-number">0 </span> Lives Saved to Date</h1>
   </div>
 
+</header>
+</section>
+
+  <div class="container-fluid">
 
 
+    <div class="row mt-5 justify-content-md-center text-center rounded" id="inquirer-banner">
+      <div class="col-3 align-items-end p-4" id="inquirer-banner-col-1-img">
+        <div style = "background-image: url(../2StylesRescue/Assests/pictures/Pretzel.jpg); height: 635px;">
+        <!-- <img src="../2StylesRescue/Assests/pictures/Pretzel.jpg" class="img-fluid rounded" alt="..."> -->
+        <div style= "background-color: white;">
+          <p>About the Rescue</p>
+          <a class="stretched-link" id="col-1-link" href="AboutUs.html">Our Story</a>
+        </div>
+      </div>
+      </div>
+      <div class="col-3 p-4" id="inquirer-banner-col-2-bg">
+        <p>Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent
+          blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non
+          cubilia lorem et pretium aliquam phasellus ipsum metus quisque auctor tristique donec nibh, praesent congue
+          ultricies aenean ornare ligula sagittis proin sed vestibulum purus tempus aenean neque aliquam curae vivamus
+          purus egestas ligula tincidunt nullam.</p>
+          <button type="button" class="btn btn-success btn-lg">Success</button>
+      </div>
+      <div class="col-3 p-4" id="inquirer-banner-col-3-img">
+        <img src="../2StylesRescue/Assests/pictures/familypic3.jpg" class="img-fluid rounded h-80" alt="...">
+        <button type="button" class="btn btn-success btn-lg">Success</button>
+      </div>
+    </div>
 
-  <footer>
-    
-  </footer>
+
+  </div>
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
 
   <script>
     count = 100;
     $("#lives-saved-banner-number").text(count).css;
   </script>
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
-    crossorigin="anonymous"></script>
 
 </body>
 
