--- a/index.html
+++ b/index.html
@@ -16,68 +16,42 @@
 
   <title>2 Style Rescue</title>
 
+
 </head>
 
 <body>
 
 
 
-<section>
-  <header>
-
-  <nav class="navbar navbar-expand-lg navbar-light" id="nav-bar-container">
-    <div class="container-fluid">
-      <div class="container">
-        <a class="navbar-brand" href="index.html" id="navbar-brand">
-          <img src="Assests/pictures/TempLogo.jpg" alt="" width="90" height="72">
-          2 Styles Rescue
-        </a>
-      </div>
-
-      <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon bg-dark"></span>
-      </button>
-
-
-
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" id="nav-bar-link" href="AboutUs.html">ABOUT US</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="nav-bar-link" href="rescues.html">RESCUES</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="nav-bar-link" href="applications.html">APPLICATIONS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="nav-bar-link" href="FAQ.html">FAQ</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="nav-bar-link" href="dontations.html">DONATIONS</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="nav-bar-link" href="blog.html">BLOG</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" id="nav-bar-link" href="contact.html">CONTACT</a>
-          </li>
-        </ul>
-      </div>
-
-    </div>
-  </nav>
+  <nav class="navbar sticky-top navbar-expand-md navbar-light mb-3">
+    <div class="container-fluid text-center" id = "nav-bar-container">
+      <a class="navbar-brand" href="index.html" id="navbar-brand">
+        <img src="Assests/pictures/TempLogo.jpg" class = "rounded-circle border border-dark" alt="" width="90" height="72">
+        2 Styles Rescue
+      </a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse text-center" id="navbarCollapse">
+            <div class="navbar-nav ml-auto">
+              <a class="nav-link px-5" id="nav-bar-link" href="AboutUs.html">ABOUT US</a>
+              <a class="nav-link px-5" id="nav-bar-link" href="applications.html">APPLICATIONS</a>
+              <a class="nav-link px-5" id="nav-bar-link" href="rescues.html">RESCUES</a>
+              <a class="nav-link px-5" id="nav-bar-link" href="FAQ.html">FAQ</a>
+              <a class="nav-link px-5" id="nav-bar-link" href="dontations.html">DONATIONS</a>
+              <a class="nav-link px-5" id="nav-bar-link" href="blog.html">BLOG</a>
+              <a class="nav-link px-5" id="nav-bar-link" href="contact.html">CONTACT</a>
+            </div>
+        </div>
+    </div>    
+</nav>
 
 
-
-
-  <div class="container-fluid text-center" id="banner-container">
+  <div class="container-fluid" id="banner-container">
     <div class="row" id="banner-row">
       <div class="col-12">
         <img src="../2StylesRescue/Assests/pictures/home_banner.png" class="img-fluid" alt="...">
-        <div class="col-12 align-items-end  mb-5">
+        <div class="col-12 align-items-end text-center mb-5">
           <h1>2 Styles Rescue</h1></br>
           <h4>Miniature Horses / Donkeys / Mules</h4>
         </div>
@@ -92,10 +66,8 @@
     <h1 class="display-3 text-white"><span id="lives-saved-banner-number">0 </span> Lives Saved to Date</h1>
   </div>
 
-</header>
-</section>
 
-  <div class="container-fluid">
+  
 
 
     <div class="row mt-5 justify-content-md-center text-center rounded" id="inquirer-banner">
@@ -104,7 +76,7 @@
         <!-- <img src="../2StylesRescue/Assests/pictures/Pretzel.jpg" class="img-fluid rounded" alt="..."> -->
         <div style= "background-color: white;">
           <p>About the Rescue</p>
-          <a class="stretched-link" id="col-1-link" href="AboutUs.html">Our Story</a>
+          <a class="link" id="col-1-link" href="AboutUs.html">Our Story</a>
         </div>
       </div>
       </div>
@@ -123,7 +95,6 @@
     </div>
 
 
-  </div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
