--- a/FAQ.html
+++ b/FAQ.html
@@ -1,59 +1,50 @@
 <!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<html lang="en-US">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="Assests/style.css">
-    
-    <title>2 Style Rescue FAQ</title>
-  </head>
-  <body>
 
-    <header>
-      <div class="container-fluid sticky-top mx-auto row justify-content-center" id="nav-bar-container">
-        <nav class="navbar navbar-expand-lg navbar-light">
-          <a class="navbar-brand" id="nav-bar-link" href="index.html">
-            <img src="./Assests/pictures/TempLogo.png" alt="" width="60" height="48"
-              class="d-inline-block align-center"><strong>2 Style Rescue</strong></a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+  <!-- <link rel="stylesheet" href="css/bootstrap.css"> -->
+  <link rel="stylesheet" href="css/site.css">
+
+  <title>2 Style Rescue</title>
+
+
+</head>
+
+<body>
+
+
+<div class="container-fluid">
+  <nav class="navbar sticky-top navbar-expand-md navbar-light mb-3" id="navbar-brand">
+    <div class="container-fluid" id = "nav-bar-container">
+      <a class="navbar-brand px-5" href="index.html">
+        <img src="Assests/pictures/TempLogo.jpg" class = "rounded-circle border border-dark" alt="" width="90" height="72">
+        2 Styles Rescue
+      </a>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
-          </button>
-  
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-              <li class="nav-item active">
-                <a class="nav-link" id="nav-bar-link" href="AboutUs.html">ABOUT US</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="nav-bar-link" href="rescues.html">RESCUES</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="nav-bar-link" href="applications.html">APPLICATIONS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="nav-bar-link" href="FAQ.html">FAQ</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="nav-bar-link" href="dontations.html">DONATIONS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="nav-bar-link" href="blog.html">BLOG</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="nav-bar-link" href="contact.html">CONTACT</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-
-      </header>
+        </button>
+        <div class="collapse navbar-collapse text-center" id="navbarCollapse">
+            <div class="navbar-nav mr-auto">
+              <a class="nav-link px-4" id="nav-bar-link" href="AboutUs.html">ABOUT US</a>
+              <a class="nav-link px-4" id="nav-bar-link" href="applications.html">APPLICATIONS</a>
+              <a class="nav-link px-4" id="nav-bar-link" href="rescues.html">RESCUES</a>
+              <a class="nav-link px-4" id="nav-bar-link" href="FAQ.html">FAQ</a>
+              <a class="nav-link px-4" id="nav-bar-link" href="dontations.html">DONATIONS</a>
+              <a class="nav-link px-4" id="nav-bar-link" href="blog.html">BLOG</a>
+              <a class="nav-link px-4" id="nav-bar-link" href="contact.html">CONTACT</a>
+            </div>
+        </div>
+    </div>    
+</nav>
 
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
